--- a/9.Disk Scheduling.ipynb
+++ b/9.Disk Scheduling.ipynb
@@ -26,24 +26,44 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Total Cylinders Crossed :  640\n"
+      "Service Request :  [55, 58, 39, 18, 90, 160, 150, 38, 184]\nService Order :  [100, 55, 58, 39, 18, 90, 160, 150, 38]\nTotal Cylinders Crossed :  498\nAverage Sleek Time :  55.333333333333336\n"
      ]
     }
    ],
    "source": [
+    "# Rohit Kumar | 1900320100131\n",
     "# FCFS Disk Scheduling\n",
-    "process=[98, 183, 37, 122, 14, 124, 65, 67] \n",
-    "n=abs(53-process[0]) \n",
+    "\n",
+    "# Array of Process Request\n",
+    "service_request=[55, 58, 39, 18, 90, 160, 150, 38, 184] \n",
+    "service_order = []\n",
+    "\n",
+    "# Service Request Order\n",
+    "print(\"Service Request : \",service_request)\n",
+    "\n",
+    "# Basic Initialization\n",
+    "initial_arm = 100\n",
+    "\n",
+    "# For Initial Arm\n",
+    "service_order.append(initial_arm)\n",
+    "cylinder_crossed=abs(initial_arm-process[0]) \n",
+    "\n",
+    "# Calculations\n",
     "for i in range(len(process)-1): \n",
-    "    n+=abs(process[i]-process[i+1]) \n",
-    "print(\"Total Cylinders Crossed : \",n)"
+    "    cylinder_crossed+=abs(service_request[i]-service_request[i+1]) \n",
+    "    service_order.append(service_request[i])\n",
+    "\n",
+    "# Output\n",
+    "print(\"Service Order : \",service_order)\n",
+    "print(\"Total Cylinders Crossed : \",cylinder_crossed)\n",
+    "print(\"Average Sleek Time : \",cylinder_crossed/len(process))\n"
    ]
   },
   {
